corpus/baselines/conformance/jsdoc/jsdocParseParenthesizedJSDocParameter.errors.txt
paren.js(1,20): error TS1005: '}' expected.
paren.js(2,9): error TS7006: Parameter 's' implicitly has an 'any' type.


==== paren.js (2 errors) ====
    /** @type {function((string)): string} */
                       ~
!!! error TS1005: '}' expected.
    var x = s => s.toString()
            ~
!!! error TS7006: Parameter 's' implicitly has an 'any' type.
    